# new-qual-site

./: .gitignore  README.md  justfile  pyproject.toml
corpus/canonical/: P-4MNRO.md  P-55AME.md  P-5UEPF.md  P-6P6KI.md  P-AWKNO.md  P-B6EUH.md  P-BH6X6.md  P-CASNS.md  P-CC3DW.md  P-CCHG2.md  P-CFEIR.md  P-FIV5I.md  P-ICQ5R.md  P-J7B76.md  P-MBHKT.md  P-MKDDF.md  P-NN3CO.md  P-O3P7X.md  P-O5JF6.md  P-OETKP.md  P-OSUVG.md  P-P2UAH.md  P-QM6M4.md  P-RYI7M.md  P-SBXGZ.md  P-TH3WN.md  P-TQV62.md  P-UE5IN.md  P-UMNQD.md  P-UV6A7.md  P-WO76I.md  P-WYWUP.md  P-YDLYC.md  P-ZLOZU.md
corpus/hand-authored/: D-7TQ2M.md  H-2JK8Q.md  S-4WQ1R.md
corpus/imports/mmaq/src-uga-alg-2018-a/: O-UGA-ALG-2018-A-01.md  O-UGA-ALG-2018-A-02.md  O-UGA-ALG-2018-A-03.md  O-UGA-ALG-2018-A-04.md  (+4 more)
publications/: algebra-guide.yaml
site/: styles.css
site/filters/: reveal.lua
tests/: test_class_totality.py  test_display_math.py  test_invariants.py  test_kind_fixtures.py  test_reader_warnings.py  test_sections.py
tests/fixtures/kinds/: CLM-ORDERDIV.md  COR-CAUCHY.md  CPT-NORMALITY.md  DEF-PGROUP.md  EXA-QUAT.md  EXE-CENTER.md  FCT-FEITTHOMPSON.md  HNT-INDEXP.md  LEM-FRATTINI.md  OCC-INDEXP.md  PRB-INDEXP.md  PRF-LAGRANGE.md  PRP-PIDX.md  REM-INDEXP.md  SLG-SYLOW.md  SOL-INDEXP.md  SRC-DUMMIT.md  SRC-NEILNOTES.md  SRC-UGA-FIX.md  STR-COUNTSYLOW.md  THM-SYLOW.md  WRN-SYLOWCOUNT.md
tools/: import_mmaq.py  sync_macros.py
tools/qualc/: cli.py  emit.py  index.py  model.py
typings/: panflute.pyi
vocabularies/: areas.yaml  institutions.yaml  macros.json  textbooks.yaml  topics.yaml
(+35 files in other folders)
