[project]
name = "qualc"
version = "0.1.0"
description = "Compiler: markdown card corpus -> semantic index -> renderer inputs"
requires-python = ">=3.14"
dependencies = ["pydantic>=2.0", "pyyaml>=6.0", "panflute>=2.3"]

[project.scripts]
qualc = "qualc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/qualc"]

[dependency-groups]
dev = ["pytest>=8", "types-PyYAML>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
